force-app/main/default/objects/pse__Proj__c/fields/Acquisition_Marker__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Marker__c</fullName>
    <formula>IF( AND(TEXT(pse__Account__r.Acquisition_Marker__c) &lt;&gt; &apos;&apos;, NOT(ISNULL(TEXT(pse__Account__r.Acquisition_Marker__c)))),TEXT(pse__Account__r.Acquisition_Marker__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Marker</label>
    <type>Text</type>
</CustomField>