force-app/main/default/objects/pse__Proj__c/fields/BS_O_Project__c.field-meta.xml
<CustomField>
    <fullName>BS_O_Project__c</fullName>
    <formula>CONTAINS(pse__Practice__r.Name , &apos;BS&apos;)</formula>
    <label>BS&amp;O Project</label>
    <type>Checkbox</type>
</CustomField>