force-app/main/default/objects/pse__Proj__c/fields/Budget_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>Budget_Recovery_Rate__c</fullName>
    <formula>IF(pse__Bookings__c = 0,0,CT_Fee_Amount__c / pse__Bookings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Recovery Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>