force-app/main/default/objects/pse__Proj__c/fields/CP_Complete__c.field-meta.xml
<CustomField>
    <fullName>CP_Complete__c</fullName>
    <formula>if (CT_Fee_Amount__c == 0,0, CT_Total_Submitted_Hours_Bill_Rate__c/CT_Fee_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP % Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>