force-app/main/default/objects/pse__Proj__c/fields/CT_Actual_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Actual_Recovery_Rate__c</fullName>
    <formula>IF( pse__Bookings__c  ==0 || CP_Total_Costs__c  == 0,0,(CT_Fee_Amount__c/ CP_Total_Costs__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Recovery Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>