force-app/main/default/objects/pse__Proj__c/fields/CT_Close_to_Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>CT_Close_to_Cost_Budget__c</fullName>
    <formula>IF ( 

IF(pse__Internal_Budget__c == 0|| pse__Total_Costs__c == 0 || ISNULL(pse__Internal_Budget__c)|| ISNULL(pse__Total_Costs__c),0,pse__Internal_Budget__c / pse__Total_Costs__c *100) &gt;= 80, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close to Cost Budget</label>
    <type>Checkbox</type>
</CustomField>