force-app/main/default/objects/pse__Proj__c/fields/CT_Current_Esimate__c.field-meta.xml
<CustomField>
    <fullName>CT_Current_Esimate__c</fullName>
    <label>Current Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>