force-app/main/default/objects/pse__Proj__c/fields/CT_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Fee_Amount__c</fullName>
    <label>Project Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>