force-app/main/default/objects/pse__Proj__c/fields/CT_Finance_Hold__c.field-meta.xml
<CustomField>
    <fullName>CT_Finance_Hold__c</fullName>
    <formula>IF(pse__Account__r.CT_Finance_Hold__c = TRUE, TRUE, FALSE)</formula>
    <label>Finance Hold</label>
    <type>Checkbox</type>
</CustomField>