force-app/main/default/objects/pse__Proj__c/fields/CT_Generate_Default_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>CT_Generate_Default_Project_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the project name based on the format [Account Name] - [Practice Name] - [Year]. (The practice name = the Service Name, the Year is the year of the end date of the project.)</description>
    <inlineHelpText>This will set the project name based on the format [Account Name] - [Practice Name] - [Year]</inlineHelpText>
    <label>Generate Default Project Name</label>
    <type>Checkbox</type>
</CustomField>