force-app/main/default/objects/pse__Proj__c/fields/CT_Patent_Box_Complete__c.field-meta.xml
<CustomField>
    <fullName>CT_Patent_Box_Complete__c</fullName>
    <formula>CASE( TEXT(  CT_Patent_Box_Stage__c ) ,
&apos;Started&apos;, 0.1,
&apos;Qualified&apos;, 0.4,
&apos;Calculations&apos;, 0.8,
&apos;Report&apos;, 0.95,
&apos;Submission&apos;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patent Box % Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>