force-app/main/default/objects/pse__Proj__c/fields/CT_Patent_Box_Stage__c.field-meta.xml
<CustomField>
    <fullName>CT_Patent_Box_Stage__c</fullName>
    <label>Patent Box Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Calculations</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>