force-app/main/default/objects/pse__Proj__c/fields/CT_Private_Client__c.field-meta.xml
<CustomField>
    <fullName>CT_Private_Client__c</fullName>
    <formula>IF(pse__Practice__r.CT_Allow_Time_Without_Assignment__c == TRUE, TRUE,FALSE)</formula>
    <label>Private Client</label>
    <type>Checkbox</type>
</CustomField>