force-app/main/default/objects/pse__Proj__c/fields/CT_Project_Partner__c.field-meta.xml
<CustomField>
    <fullName>CT_Project_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner related to the project. Also used to for the Recovery Rate % approval</description>
    <label>Project Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>