force-app/main/default/objects/pse__Proj__c/fields/CT_R_D_Complete__c.field-meta.xml
<CustomField>
    <fullName>CT_R_D_Complete__c</fullName>
    <formula>CASE( TEXT( CT_R_D_Stage__c) , 
&apos;Started&apos;, 0.1, 
&apos;Planning&apos;, 0.35,
&apos;Workshop&apos;, 0.65, 
&apos;Technical Narrative&apos;, 0.9,
&apos;Report&apos;, 1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;D % Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>