force-app/main/default/objects/pse__Proj__c/fields/CT_R_D_Stage__c.field-meta.xml
<CustomField>
    <fullName>CT_R_D_Stage__c</fullName>
    <label>R&amp;D Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Technical Summary</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>