force-app/main/default/objects/pse__Proj__c/fields/CT_Recalculate_Access__c.field-meta.xml
<CustomField>
    <fullName>CT_Recalculate_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate_Access</label>
    <type>Checkbox</type>
</CustomField>