force-app/main/default/objects/pse__Proj__c/fields/CT_Recognisable_Value__c.field-meta.xml
<CustomField>
    <fullName>CT_Recognisable_Value__c</fullName>
    <formula>(IF(  CP_Complete__c  &gt; 1,1,CP_Complete__c))*  CT_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recognisable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>