force-app/main/default/objects/pse__Proj__c/fields/CT_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Recovery_Rate__c</fullName>
    <formula>pse__Bookings__c  /  CT_Total_Submitted_Hours_Bill_Rate__c</formula>
    <label>Recovery Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>