force-app/main/default/objects/pse__Proj__c/fields/CT_Total_Requested_hours__c.field-meta.xml
<CustomField>
    <fullName>CT_Total_Requested_hours__c</fullName>
    <inlineHelpText>Total Requested Hours (Excluding the Assigned Hours)</inlineHelpText>
    <label>Total Requested hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>