force-app/main/default/objects/pse__Proj__c/fields/CT_Total_Submitted_Hours_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Total_Submitted_Hours_Bill_Rate__c</fullName>
    <label>Total Submitted Hours * Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>