force-app/main/default/objects/pse__Proj__c/fields/CT_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Year_End_Date__c</fullName>
    <label>Year End Date</label>
    <type>Date</type>
</CustomField>