force-app/main/default/objects/pse__Proj__c/fields/ffrrIncludeInRevenueRecognition__c.field-meta.xml
<CustomField>
    <fullName>ffrrIncludeInRevenueRecognition__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include In Revenue Recognition</label>
    <type>Checkbox</type>
</CustomField>