force-app/main/default/objects/pse__Proj__c/fields/Manager_approval_required_for_billing__c.field-meta.xml
<CustomField>
    <fullName>Manager_approval_required_for_billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needing manager approval for billing</description>
    <inlineHelpText>Needing manager approval for billing</inlineHelpText>
    <label>Manager approval required for billing</label>
    <type>Checkbox</type>
</CustomField>