force-app/main/default/objects/pse__Proj__c/fields/Original_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Original_Estimate__c</fullName>
    <label>Original Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>