force-app/main/default/objects/pse__Proj__c/fields/Original_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Fee_Amount__c</fullName>
    <label>Original Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>