force-app/main/default/objects/pse__Proj__c/fields/Project_Access__c.field-meta.xml
<CustomField>
    <fullName>Project_Access__c</fullName>
    <label>Project Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public access</fullName>
                <default>true</default>
                <label>Public access</label>
            </value>
            <value>
                <fullName>Public access with restrictions</fullName>
            </value>
            <value>
                <fullName>VIP Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>