force-app/main/default/objects/pse__Proj__c/fields/Unapproved_only_for_data_migration__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_only_for_data_migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unapproved (only for data migration)</label>
    <type>Checkbox</type>
</CustomField>