force-app/main/default/objects/pse__Proj__c/validationRules/Dates_mandatory_if_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_mandatory_if_Active</fullName>
    <active>true</active>
    <errorConditionFormula>pse__Is_Active__c &amp;&amp;   OR(ISBLANK(pse__Start_Date__c),ISBLANK(pse__End_Date__c))</errorConditionFormula>
    <errorDisplayField>pse__End_Date__c</errorDisplayField>
    <errorMessage>Project Start and Project End Date are  mandatory for an active project</errorMessage>
</ValidationRule>