force-app/main/default/objects/pse__Proj__c/validationRules/Lowest_level_practice_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lowest_level_practice_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(pse__Practice__c) &amp;&amp; NOT(ISNULL(pse__Practice__c)) &amp;&amp; pse__Practice__r.pse__Hierarchy_Depth__c &lt; 3</errorConditionFormula>
    <errorDisplayField>pse__Practice__c</errorDisplayField>
    <errorMessage>Only the lowest level practices are allowed</errorMessage>
</ValidationRule>