force-app/main/default/objects/pse__Proj__c/validationRules/Not_RD_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_RD_Project</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(CT_R_D_Stage__c)&lt;&gt; &apos;&apos;  &amp;&amp;  pse__Practice__r.Name &lt;&gt; &apos;Research and development&apos;)  || 

(TEXT(CT_Patent_Box_Stage__c) &lt;&gt; &apos;&apos; &amp;&amp; pse__Practice__r.Name &lt;&gt; &apos;Patent Box&apos;)</errorConditionFormula>
    <errorMessage>R&amp;D or Patent Box Stage specified for non R&amp;D or Patent Box Project - please correct!</errorMessage>
</ValidationRule>