force-app/main/default/objects/pse__Proj__c/validationRules/Partners_region_vs_Project_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Partners_region_vs_Project_Region</fullName>
    <active>true</active>
    <description>Check if the Project Partner&apos;s region is same as the Project Region or not while 1st time creation of project</description>
    <errorConditionFormula>IF( ISNEW() &amp;&amp; NOT(ISNULL(CT_Project_Partner__c)) &amp;&amp; NOT(ISNULL(pse__Region__c)) , IF( pse__Region__c != CT_Project_Partner__r.Contact.pse__Region__c , true,false) ,false)</errorConditionFormula>
    <errorMessage>The region of Project Partner is different than the region selected on Project.</errorMessage>
</ValidationRule>