force-app/main/default/objects/pse__Proj__c/validationRules/Template_Projects_do_not_require_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Projects_do_not_require_Account</fullName>
    <active>true</active>
    <description>Allow Account to be blank for Template Projects only</description>
    <errorConditionFormula>AND(
ISBLANK( pse__Account__c),
pse__Is_Template__c =FALSE
)</errorConditionFormula>
    <errorMessage>Non &quot;Template&quot; Projects require an Account</errorMessage>
</ValidationRule>