force-app/main/default/objects/pse__Proj__c/listViews/All_Customer_Projects.listView-meta.xml
<ListView>
    <fullName>All_Customer_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CT_Generate_Default_Project_Name__c</columns>
    <columns>CT_Year_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <label>All Customer Projects</label>
</ListView>