force-app/main/default/objects/pse__Proj__c/listViews/ffscpq__Draft_Estimates.listView-meta.xml
<ListView>
    <fullName>ffscpq__Draft_Estimates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Estimate_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Estimates</label>
</ListView>