force-app/main/default/objects/pse__Proj__c/listViews/ffscpq__Estimates.listView-meta.xml
<ListView>
    <fullName>ffscpq__Estimates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Estimates</label>
</ListView>