force-app/main/default/objects/pse__Proj__c/listViews/ffscpq__Estimates_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>ffscpq__Estimates_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Estimate_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Estimates Awaiting Approval</label>
</ListView>