force-app/main/default/objects/pse__Proj__c/listViews/ffscpq__Primary_Estimates.listView-meta.xml
<ListView>
    <fullName>ffscpq__Primary_Estimates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Primary Estimates</label>
</ListView>