force-app/main/default/objects/pse__Proj__c/listViews/Internal_Projects.listView-meta.xml
<ListView>
    <fullName>Internal_Projects</fullName>
    <columns>pse__Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>ffpsai__ExpenseGLACode__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>pse__Closed_for_Expense_Entry__c</columns>
    <columns>pse__Closed_for_Time_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Internal</value>
    </filters>
    <label>Internal Projects</label>
</ListView>