force-app/main/default/objects/pse__Proj__c/listViews/Projects_at_80_of_Planned_Costs.listView-meta.xml
<ListView>
    <fullName>Projects_at_80_of_Planned_Costs</fullName>
    <columns>pse__Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Project_Status__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>pse__Unscheduled_Backlog__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>pse__Is_Template__c</columns>
    <columns>pse__Billed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CT_Close_to_Cost_Budget__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Projects at  &gt;= 80% of Planned Costs</label>
</ListView>