force-app/main/default/objects/pse__Proj__c/listViews/psaws__My_Projects.listView-meta.xml
<ListView>
    <fullName>psaws__My_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Status_Visual__c</columns>
    <columns>pse__Schedule_Visual__c</columns>
    <columns>pse__Financial_Visual__c</columns>
    <columns>pse__Bookings__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Project_Manager_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Projects</label>
</ListView>