force-app/main/default/objects/pse__Proj__c/listViews/pse__All_Project_Templates.listView-meta.xml
<ListView>
    <fullName>pse__All_Project_Templates</fullName>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>pse__Is_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Project Templates</label>
</ListView>